# rugs.fun-fork

./: README.md  docker-compose.yml  env.example  package.json
backend/: package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/middleware/: auth.ts  errorHandler.ts
backend/src/routes/: analytics.ts  bets.ts  leaderboard.ts  tokens.ts  users.ts
backend/src/services/: rugscore.ts  solana.ts
contracts/: Anchor.toml
contracts/programs/rugfork/: Cargo.toml
contracts/programs/rugfork/src/: errors.rs  lib.rs  state.rs
contracts/programs/rugfork/src/instructions/: crash_pool.rs  initialize_pool.rs  launch_token.rs  mod.rs  place_sidebet.rs  rug_royale.rs  rug_score.rs  settle_sidebet.rs  update_pool_params.rs  user_profile.rs
docs/: api.md  contracts.md
frontend/: Dockerfile  next.config.js  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/launch/: page.tsx
frontend/src/app/royale/: page.tsx
frontend/src/app/sidebet/: page.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/providers/: AppProviders.tsx
scripts/: deploy-enhanced.sh  deploy.sh  setup.sh
