[package]
name = "rugfork"
version = "0.1.0"
description = "RugFork - Gamified crypto trading platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rugfork"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.18.15"
solana-program-test = "1.18.15"
solana-sdk = "1.18.15"

[dev-dependencies]
solana-program-test = "1.18.15"
solana-sdk = "1.18.15"
tokio = "1.0"
